@@ -51,7 +51,7 @@ import logging
 #LOG_FILENAME = 'proxy_core.log'
 logging.basicConfig(#filename=LOG_FILENAME,
                     format="%(asctime)s - %(name)s - %(levelname)s - %(message)s",
-                    level=logging.DEBUG)
+                    level=logging.WARN)
 
 logger = logging.getLogger("proxy_core")
 
