@@ -103,9 +103,9 @@ import logging, time
 LOG_FILENAME = 'importer.log'
 logging.basicConfig(filename=LOG_FILENAME,
                     format="%(asctime)s - %(name)s - %(levelname)s - %(message)s",
-                    level=logging.DEBUG)
+                    level=logging.INFO)
 
-logger = logging.getLogger("check_index_sanity")
+logger = logging.getLogger()
 
 ch = logging.StreamHandler()
 ch.setLevel(logging.INFO)
